Fixed image getting smaller when card was expanded on mobile

--- a/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
@@ -74,7 +74,7 @@
 
     .image-container{
       justify-content: center;
-      width: 50%;
+      width: 75%;
     }
 
     .expanded-text{
@@ -182,7 +182,14 @@ img {
   .card {
     width: 90%;
     font-size: 3vw;
-  }
+    &.large{
+      width: 90%;
+    
+        .image-container{
+          width: 100%;
+        }
+      }
+    }
 
   .card:hover {
     -webkit-box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
